WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181523
Null deref in WebImmediateActionController _dictionaryPopupInfoForRange
https://bugs.webkit.org/show_bug.cgi?id=181523
Summary
Null deref in WebImmediateActionController _dictionaryPopupInfoForRange
Tim Horton
Reported
2018-01-11 00:24:08 PST
Null deref in WebImmediateActionController _dictionaryPopupInfoForRange
Attachments
Patch
(2.75 KB, patch)
2018-01-11 00:24 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-sierra-wk2
(2.95 MB, application/zip)
2018-01-11 01:43 PST
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-01-11 00:24:29 PST
Created
attachment 331037
[details]
Patch
EWS Watchlist
Comment 2
2018-01-11 01:43:36 PST
Comment hidden (obsolete)
Comment on
attachment 331037
[details]
Patch
Attachment 331037
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/6031940
New failing tests: http/tests/workers/service/postmessage-after-sw-process-crash.https.html
EWS Watchlist
Comment 3
2018-01-11 01:43:37 PST
Comment hidden (obsolete)
Created
attachment 331041
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 4
2018-01-11 11:58:18 PST
Comment on
attachment 331037
[details]
Patch Clearing flags on attachment: 331037 Committed
r226793
: <
https://trac.webkit.org/changeset/226793
>
WebKit Commit Bot
Comment 5
2018-01-11 11:58:19 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-01-11 11:59:40 PST
<
rdar://problem/36446104
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug