Null deref in WebImmediateActionController _dictionaryPopupInfoForRange https://bugs.webkit.org/show_bug.cgi?id=181523 <rdar://problem/28959131>

Reviewed by Alex Christensen.

* WebView/WebImmediateActionController.mm:
(+[WebImmediateActionController _dictionaryPopupInfoForRange:inFrame:withLookupOptions:indicatorOptions:transition:]):
Apply the change made in r216652 to WebKit1's immediate action controller.

Speculative (but successful in WebKit2) fix for non-reproducible crash when
the startContainer of the range is in an anonymous node.


Canonical link: https://commits.webkit.org/197408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226793 268f45cc-cd09-0410-ab3c-d52691b4dbfc